# HV_3DPilot_Algorithm

./: .gitignore  CMakeLists.txt
.claude/: settings.local.json
HandEyeCalibration/include/: HandEyeCalibrationParam.h  HandEyeCalibrationSDK.h
cmake/: CopyIcons.cmake
include/: HVAnyInputProbe.h  HVCloudFit.h  HVCloudIO.h  HVCloudPreprocess.h  HVCloudRegister.h  HVCloudSegment.h  HVConditionCheck.h  HVConditionalBranch.h  HVFormat.h  HVHandEyeCalibration.h  HVImageEdge.h  HVImageFilter.h  HVImageReader.h  HVImageRoiCrop.h  HVImageSave.h  HVImageTextDisplay.h  HVLineLaser3DCamera.h  HVLineLaser3DCameraConversion.h  HVLoop.h  HVLuaScriptNode.h  HVLuaScriptRouting.h  HVRoiCreate.h  HVSchemaNodeEngine.h  HVSendData.h  HVTimestampGenerate.h  HVUtils.h  HVVariableCalculate.h
source/Calibration/HandEyeCalibrationNode/: HVHandEyeCalibration.cpp
source/Capture/HVCloudIO/: HVCloudIO.cpp
source/Capture/HVImageReader/: HVImageReader.cpp
source/Capture/HVLineLaser3DCamera/: HVLineLaser3DCamera.cpp  HVLineLaser3DCameraContract.cpp  HVLineLaser3DCameraContract.h  HVLineLaser3DCameraConversion.cpp
source/Communication/HVSendData/: HVSendData.cpp
source/HVCloudFit/: HVCloudFit.cpp
source/HVCloudIO/: HVCloudIO.cpp
source/HVCloudPreprocess/: HVCloudPreprocess.cpp
source/HVCloudRegister/: HVCloudRegister.cpp
source/HVCloudSegment/: HVCloudSegment.cpp
source/HVImageEdge/: HVImageEdge.cpp
source/HVImageFilter/: HVImageFilter.cpp
source/HVImageReader/: HVImageReader.cpp
source/ImageProcess/HVImageEdge/: HVImageEdge.cpp
source/ImageProcess/HVImageFilter/: HVImageFilter.cpp
source/ImageProcess/HVImageRoiCrop/: HVImageRoiCrop.cpp
source/ImageProcess/HVImageSave/: HVImageSave.cpp
source/ImageProcess/HVImageTextDisplay/: HVImageTextDisplay.cpp
source/ImageProcess/HVRoiCreate/: HVRoiCreate.cpp
source/LogicTool/ConditionCheck/: HVConditionCheck.cpp
source/LogicTool/ConditionalBranch/: ConditionalBranch.cpp  HVConditionalBranch.cpp
source/LogicTool/Format/: HVFormat.cpp
source/LogicTool/HVAnyInputProbe/: HVAnyInputProbe.cpp
source/LogicTool/HVLuaScriptNode/: HVLuaScriptNode.cpp
source/LogicTool/HVLuaScriptRouting/: HVLuaScriptRouting.cpp
source/LogicTool/HVRoiCreate/: HVRoiCreate.cpp
source/LogicTool/Loop/: HVLoop.cpp
source/LogicTool/TimestampGenerate/: HVTimestampGenerate.cpp
source/LogicTool/VariableCalculate/: HVVariableCalculate.cpp
source/PointCloudProcess/HVCloudFit/: HVCloudFit.cpp
source/PointCloudProcess/HVCloudPreprocess/: HVCloudPreprocess.cpp
source/PointCloudProcess/HVCloudRegister/: HVCloudRegister.cpp
source/PointCloudProcess/HVCloudSegment/: HVCloudSegment.cpp
source/common/: HVNodeReferenceResolver.cpp  HVNodeReferenceResolver.h  HVSchemaNodeEngine.cpp  HVUtils.cpp  HVUtils.h
tests/: HVHandEyeCalibrationTest.cpp  HVImageReaderDepthTest.cpp  HVImageSaveTest.cpp  HVSchemaJsonTraitsTest.cpp  HVVariableCalculateTest.cpp  line_laser_3d_camera_contract_test.cpp
